Changed layout landing page

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 <p>Wij zijn twee studenten met een passie voor wiskundige concepten...</p>
                 <div class="creators">
                     <div>
-                        <img src="./img/liwa.png" alt="Liwa">
+                        <img src="./img/liwa.png" alt="Liwa" class="creator-image">
                         <h3>Liwa</h3>
                         <p>Ik ben Liwa, 19 jaar oud, momenteel bezig met mijn studie...</p>
                         <a href="over-ons.html">Zie meer</a>
                     </div>
                     <div>
-                        <img src="./img/yunus.png" alt="Yunus">
+                        <img src="./img/yunus.png" alt="Yunus" class="creator-image">
                         <h3>Yunus</h3>
                         <p>Hey! Ik ben Yunus Emre Bayraktar, een van de hosten van deze podcast...</p>
                         <a href="over-ons.html">Zie meer</a>
@@ -94,14 +94,17 @@
         <section>
             <div class="container">
                 <h2>Koop ons!</h2>
-                <div class="product-list">
+                <div class="product-container">
                     <div class="product">
-                        <img src="./img/mok.png" alt="Mok vortex print merchandise">
-                        <a href="#overlayProduct1">Zie meer</a>
+                        <a href="#overlayProduct1">
+                            <!-- Broer heeft laten zien dat een image in een link kan -->
+                            <img src="./img/mok.png" alt="Mok vortex print merchandise">
+                        </a>
                     </div>
                     <div class="product">
-                        <img src="./img/T-shirt.png" alt="T shirt vortex print merchandise">
-                        <a href="#overlayProduct2">Zie meer</a>
+                        <a href="#overlayProduct2">
+                            <img src="./img/T-shirt.png" alt="T shirt vortex print merchandise">
+                        </a>
                     </div>
                 </div>
             </div>
